--- a/page3.html
+++ b/page3.html
@@ -10,7 +10,7 @@
       background: black;
       color: white;
       text-align: center;
-      overflow-x: hidden;
+      overflow: hidden;
     }
     h1 {
       margin-top: 20px;
@@ -18,8 +18,7 @@
       color: yellow;
       text-shadow: 2px 2px 6px #000;
     }
-    .slideshow-container {
-      position: relative;
+    .image-container {
       margin: 20px auto;
       max-width: 1300px;
       min-width: 900px;
@@ -28,13 +27,12 @@
       overflow: hidden;
       box-shadow: 0px 0px 20px rgba(0,0,0,0.6);
     }
-    .slides {
+    .image-container img {
+      width: 100%;
+      height: auto;
       display: none;
-      width: 100%;
     }
-    .slides img {
-      width: 100%;
-      height: auto;  /* ✅ Auto height */
+    .image-container img.active {
       display: block;
     }
     .message {
@@ -63,61 +61,131 @@
     button:hover {
       background: deeppink;
     }
+    /* Floating emoji animation */
+    .emoji {
+      position: absolute;
+      font-size: 28px;
+      animation: floatDown linear infinite;
+      z-index: 2;
+    }
+    @keyframes floatDown {
+      0% { top: -50px; opacity: 1; }
+      100% { top: 100vh; opacity: 0; }
+    }
+    /* Confetti canvas */
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      z-index: 5;
+    }
   </style>
 </head>
 <body>
   <h1>Happy Birthday #Magle 😘</h1>
 
-  <!-- 🎶 Background Song -->
-  <audio autoplay loop>
-    <source src="Amma.mp3" type="audio/mpeg">
-  </audio>
-
-  <!-- Slideshow -->
-  <div class="slideshow-container">
-    <div class="slides"><img src="Amma1.jpg" alt="Amma1"></div>
-    <div class="slides"><img src="Amma2.jpg" alt="Amma2"></div>
-    <div class="slides"><img src="Amma3.jpg" alt="Amma3"></div>
-    <div class="slides"><img src="Amma4.jpg" alt="Amma4"></div>
-    <div class="slides"><img src="Amma5.jpg" alt="Amma5"></div>
+  <div class="image-container">
+    <img src="Amma1.jpg" class="active">
+    <img src="Amma2.jpg">
+    <img src="Amma3.jpg">
+    <img src="Amma4.jpg">
+    <img src="Amma5.jpg">
   </div>
 
   <div class="message">
-    Un Amma ku... Love you Amma 🌍 <br>
+    Un Amma ku... Love you Amma 🌎 <br>
     Apram more than 10 kisses 😘 type pannu next page ku pogum 💕
   </div>
 
   <input type="text" id="answer" placeholder="Type here...">
   <button onclick="checkAnswer()">Submit</button>
 
+  <audio autoplay loop>
+    <source src="Amma.mp3" type="audio/mpeg">
+  </audio>
+
+  <canvas id="confetti"></canvas>
+
   <script>
-    // Slideshow function
-    let slideIndex = 0;
-    showSlides();
-    function showSlides() {
-      let slides = document.getElementsByClassName("slides");
-      for (let i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > slides.length) { slideIndex = 1 }
-      slides[slideIndex-1].style.display = "block";
-      setTimeout(showSlides, 2000); // 2s per slide
+    // Slideshow
+    let slides = document.querySelectorAll(".image-container img");
+    let index = 0;
+    setInterval(()=>{
+      slides[index].classList.remove("active");
+      index = (index+1)%slides.length;
+      slides[index].classList.add("active");
+    },3000);
+
+    // Floating emojis 🌎 😘 💎 🫂
+    const emojis = ["🌎","😘","💎","🫂"];
+    function createEmoji() {
+      const emoji = document.createElement("div");
+      emoji.innerText = emojis[Math.floor(Math.random()*emojis.length)];
+      emoji.classList.add("emoji");
+      emoji.style.left = Math.random() * 100 + "vw";
+      emoji.style.animationDuration = 3 + Math.random() * 3 + "s";
+      emoji.style.fontSize = (20 + Math.random()*25) + "px";
+      document.body.appendChild(emoji);
+      setTimeout(() => { emoji.remove(); }, 6000);
+    }
+    setInterval(createEmoji, 200);
+
+    // Confetti effect
+    const confetti = document.getElementById('confetti');
+    const ctx = confetti.getContext('2d');
+    confetti.width = window.innerWidth;
+    confetti.height = window.innerHeight;
+
+    let particles = [];
+    function randomColor() {
+      const colors = ["#ff0","#ff66cc","#00f","#0f0","#f0f","#0ff","#fff"];
+      return colors[Math.floor(Math.random()*colors.length)];
     }
 
-    // Quiz validation + auto move
+    function createConfetti() {
+      for(let i=0;i<300;i++){
+        particles.push({
+          x: Math.random()*confetti.width,
+          y: Math.random()*confetti.height - confetti.height,
+          w: 8,
+          h: 14,
+          color: randomColor(),
+          speed: Math.random()*3+2
+        });
+      }
+    }
+
+    function drawConfetti() {
+      ctx.clearRect(0,0,confetti.width,confetti.height);
+      particles.forEach((p,i)=>{
+        ctx.fillStyle = p.color;
+        ctx.fillRect(p.x,p.y,p.w,p.h);
+        p.y += p.speed;
+        if(p.y > confetti.height) particles.splice(i,1);
+      });
+      requestAnimationFrame(drawConfetti);
+    }
+    drawConfetti();
+
+    // Quiz check + auto move
     function checkAnswer() {
       let ans = document.getElementById("answer").value;
       let kissCount = (ans.match(/😘/g) || []).length;
-      if (ans.includes("Love you Amma") && kissCount > 10) {
-        // ✅ Smooth auto move
+      if (kissCount > 10) {
+        createConfetti();
         setTimeout(() => {
-          window.location.href = "page4.html";
-        }, 1000);
+          window.location.href = "page4.html"; // Auto move
+        }, 2000);
       } else {
-        alert("Type correctly with more than 10 😘!");
+        alert("Type more than 10 😘!");
       }
     }
+
+    window.addEventListener("resize",()=>{
+      confetti.width = window.innerWidth;
+      confetti.height = window.innerHeight;
+    });
   </script>
 </body>
 </html>
