--- a/page5.html
+++ b/page5.html
@@ -2,133 +2,181 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Surprise Cube</title>
+  <title>Page 5 - Birthday Surprise</title>
   <style>
     body {
       margin: 0;
-      overflow: hidden;
+      height: 100vh;
       background: black;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      color: white;
+      text-align: center;
       font-family: Arial, sans-serif;
     }
-
-    /* Top Text */
-    .top-text {
-      position: absolute;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      color: white;
-      font-size: 22px; /* Increased font size */
-      text-align: center;
-      width: 100%;
+    h1 {
+      font-size: 40px;
+      font-weight: bold;
+      margin-bottom: 20px;
     }
-
-    /* Floating emojis */
-    .emoji {
-      position: absolute;
-      font-size: 24px;
-      animation: float 6s infinite linear;
-    }
-
-    @keyframes float {
-      from { transform: translateY(100vh); }
-      to { transform: translateY(-10vh); }
-    }
-
-    /* Cube */
     .scene {
-      width: 200px;
-      height: 200px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      perspective: 600px;
+      width: 400px;
+      height: 400px;
+      perspective: 1000px;
     }
-
     .cube {
       width: 100%;
       height: 100%;
       position: relative;
       transform-style: preserve-3d;
-      animation: rotate 10s infinite linear;
+      animation: rotate 20s infinite linear;
     }
-
-    .cube div {
+    .cube img {
       position: absolute;
-      width: 200px;
-      height: 200px;
-      background-size: cover;
-      background-position: center;
+      width: 400px;
+      height: 400px;
+      object-fit: cover;
     }
-
-    .front  { transform: rotateY(0deg) translateZ(100px); }
-    .back   { transform: rotateY(180deg) translateZ(100px); }
-    .right  { transform: rotateY(90deg) translateZ(100px); }
-    .left   { transform: rotateY(-90deg) translateZ(100px); }
-    .top    { transform: rotateX(90deg) translateZ(100px); }
-    .bottom { transform: rotateX(-90deg) translateZ(100px); }
+    .cube img:nth-child(1) { transform: rotateY(0deg) translateZ(200px); }
+    .cube img:nth-child(2) { transform: rotateY(90deg) translateZ(200px); }
+    .cube img:nth-child(3) { transform: rotateY(180deg) translateZ(200px); }
+    .cube img:nth-child(4) { transform: rotateY(-90deg) translateZ(200px); }
+    .cube img:nth-child(5) { transform: rotateX(90deg) translateZ(200px); }
+    .cube img:nth-child(6) { transform: rotateX(-90deg) translateZ(200px); }
 
     @keyframes rotate {
       from { transform: rotateX(0deg) rotateY(0deg); }
       to { transform: rotateX(360deg) rotateY(360deg); }
     }
 
-    /* Quiz Section */
     .quiz {
-      position: absolute;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 15px;
-      color: white;
+      margin-top: 40px;
+      font-size: 22px;
+    }
+    input {
+      font-size: 18px;
+      padding: 8px;
+      border-radius: 8px;
+      border: none;
       text-align: center;
     }
-
-    .quiz button {
-      margin-top: 10px;
-      padding: 10px 20px;
+    button {
+      font-size: 18px;
+      margin-left: 10px;
+      padding: 8px 15px;
+      border-radius: 8px;
       border: none;
-      border-radius: 10px;
+      background: #ff3399;
+      color: white;
       cursor: pointer;
-      background: pink;
-      font-size: 16px;
+    }
+    .emoji {
+      position: absolute;
+      font-size: 30px;
+      animation: floatUp 8s linear infinite;
+    }
+    @keyframes floatUp {
+      0% { transform: translateY(100vh) scale(1); opacity: 1; }
+      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
+    }
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
     }
   </style>
 </head>
 <body>
-  <!-- Top Text -->
-  <div class="top-text">
-    Namma 1st Selfie loosuu😘🙈, Apro pink saree personal🤭 Always blessed to have you in my Life 🤗
-  </div>
-
-  <!-- Floating Emojis -->
-  <div class="emoji" style="left:10%;">😘</div>
-  <div class="emoji" style="left:30%;">💎</div>
-  <div class="emoji" style="left:50%;">💙</div>
-  <div class="emoji" style="left:70%;">🤭</div>
-  <div class="emoji" style="left:90%;">❤️</div>
-
-  <!-- Cube -->
+  <h1>Namma 1st Selfie loosuu, Always blessed to have you in my Life 🤗</h1>
   <div class="scene">
     <div class="cube">
-      <div class="front" style="background-image: url('1000040127.jpg');"></div>
-      <div class="back" style="background-image: url('1000040127.jpg');"></div>
-      <div class="right" style="background-image: url('1000040127.jpg');"></div>
-      <div class="left" style="background-image: url('1000040127.jpg');"></div>
-      <div class="top" style="background-image: url('1000040127.jpg');"></div>
-      <div class="bottom" style="background-image: url('1000040127.jpg');"></div>
+      <img src="First1.jpg" alt="">
+      <img src="First2.jpg" alt="">
+      <img src="First3.jpg" alt="">
+      <img src="First4.jpg" alt="">
+      <img src="First5.jpg" alt="">
+      <img src="First6.jpg" alt="">
     </div>
   </div>
-
-  <!-- Quiz -->
   <div class="quiz">
-    <p><strong>💕 Small Quiz 💕</strong></p>
-    <p>When was our 1st selfie taken? 📸</p>
-    <button onclick="alert('Correct! 🥰')">College Day</button>
-    <button onclick="alert('Oops! Try again 😘')">School Day</button>
+    <p>Unnoda Loosu ku more than hug kudu next page ku pogum 🫂</p>
+    <input id="answer" placeholder="Type here...">
+    <button onclick="checkAnswer()">Submit</button>
   </div>
+
+  <audio autoplay loop>
+    <source src="First.mp3" type="audio/mpeg">
+  </audio>
+
+  <canvas id="fireworks"></canvas>
+
+  <script>
+    // Floating Emojis
+    const emojis = ["💙","🤗","😚","🫂","💎","❤️‍🩹","🙈","🎆","🎇"];
+    function createEmoji() {
+      const emoji = document.createElement("div");
+      emoji.className = "emoji";
+      emoji.innerText = emojis[Math.floor(Math.random()*emojis.length)];
+      emoji.style.left = Math.random() * 100 + "vw";
+      emoji.style.animationDuration = 5 + Math.random() * 5 + "s";
+      document.body.appendChild(emoji);
+      setTimeout(() => emoji.remove(), 8000);
+    }
+    setInterval(createEmoji, 400);
+
+    // Fireworks Effect
+    const canvas = document.getElementById('fireworks');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    let particles = [];
+
+    function firework(x, y) {
+      for (let i = 0; i < 80; i++) {
+        particles.push({
+          x, y,
+          angle: Math.random() * 2 * Math.PI,
+          speed: Math.random() * 5 + 2,
+          radius: 2,
+          life: 100
+        });
+      }
+    }
+
+    function animate() {
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+      particles.forEach((p,i) => {
+        p.x += Math.cos(p.angle) * p.speed;
+        p.y += Math.sin(p.angle) * p.speed;
+        p.life--;
+        ctx.beginPath();
+        ctx.arc(p.x,p.y,p.radius,0,2*Math.PI);
+        ctx.fillStyle = `hsl(${p.life*3},100%,50%)`;
+        ctx.fill();
+        if(p.life <= 0) particles.splice(i,1);
+      });
+      requestAnimationFrame(animate);
+    }
+
+    setInterval(() => {
+      firework(Math.random()*canvas.width, Math.random()*canvas.height/2);
+    }, 1000);
+    animate();
+
+    // Quiz
+    function checkAnswer() {
+      const ans = document.getElementById("answer").value.trim();
+      const correct = "🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂";
+      if (ans === correct) {
+        window.location.href = "page6.html";
+      } else {
+        alert("Try again with more hugs 🫂!");
+      }
+    }
+  </script>
 </body>
 </html>
